UI U11: start reference-parity migration to peegeeq-management-ui patterns
Review of peegee-cache-management-ui against the reference console found the
U1-U10 pages built without the mandated stack: antd, RTK Query, react-redux and
recharts were declared but never imported, every control was hand-written
CSS/JSX, pages took *ClientPort props so tests could inject fakes, and the
plan's §6.1 static gates were mostly missing. Decision: full parity with the
reference, including its resolved dependency versions; hand-rolled controls
and test doubles are now prohibited by directive.

Directives and plan
- Add phase U11 (slices U11.0-U11.9) to the UI implementation plan with RED
  and GREEN evidence for U11.0-U11.2; correct the status line (no U11 existed).
- Mandate antd/Recharts-only controls and no-test-doubles in UI design §3.1/§8.1,
  testing standard §5, and plan §4.1/§5/§6; fix design route /cache-setups.
- Add docs/design/PEEGEEQ_CACHE_UI_U11_HANDOVER_2026-09-03.md.

U11.0 guard gates (RED against the U10 tree, by design)
- test/quality: source-scan.ts plus component-library, no-test-fakes,
  no-direct-transport, zod-fixture and sensitive-dto guards.
- Pin @vitest/coverage-v8 with 80% branch thresholds on src/api and src/state;
  Maven frontend-test and npm verify run test:coverage; drop axe-core and
  restoreMocks; document guards in README.

U11.1 store (GREEN)
- src/store: one createApi (managementApi) with per-family injectEndpoints
  (setups, inspection, entries, resources, pubSub); every endpoint is a queryFn
  delegating to the typed src/api client so Zod parsing, CSRF and
  preconditions stay in one place; base query delegates to SessionClient.
- ManagementProvider/useManagementClients for no-store reveal paths only;
  App creates a store per session and resets the cache on teardown.
- test/support/loopback-server.ts shared node:http fixture; test/store.test.ts.

U11.2 shell (GREEN in module; Java Playwright gate pending)
- ManagementShell on antd ConfigPro