@@ -2,8 +2,9 @@ package dev.mars.peegeeq.cache.rest.server;
 
 import com.microsoft.playwright.Browser;
 import com.microsoft.playwright.BrowserContext;
+import com.microsoft.playwright.Locator;
 import com.microsoft.playwright.Page;
-import com.microsoft.playwright.Playwright;
+import com.microsoft.playwright.options.Cookie;
 import dev.mars.peegeeq.cache.api.management.ManagementSecretReference;
 import dev.mars.peegeeq.cache.pg.bootstrap.PgSchemaMigrator;
 import dev.mars.peegeeq.cache.rest.security.BrowserOriginPolicy;
@@ -24,13 +25,16 @@ import org.testcontainers.utility.MountableFile;
 import java.net.InetAddress;
 import java.net.ServerSocket;
 import java.net.URI;
+import java.nio.charset.StandardCharsets;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.time.Clock;
 import java.util.ArrayList;
+import java.util.IdentityHashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.Set;
+import java.util.UUID;
 import java.util.concurrent.TimeUnit;
 
 import static org.junit.jupiter.api.Assertions.assertEquals;
@@ -80,7 +84,13 @@ final class ManagementConsolePostgresFixture {
             "testUnregisteredSetup", "registerSetup");
     private static final Set<String> FIXTURE_OPERATIONS = Set.of(
             "getSession", "exchangeLocalToken", "listSetups", "testUnregisteredSetup",
-            "registerSetup", "getSetupCapabilities", "getOverview");
+            "registerSetup", "getSetupCapabilities", "getOverview", "getDatabaseMonitoring",
+            "getRuntimeMonitoring", "listActivity");
+    private static final Set<String> ISOLATED_LIFECYCLE_OPERATIONS = Set.of(
+            "testUnregisteredSetup", "registerSetup", "connectSetup", "detachSetup",
+            "forgetSetup", "deleteLocalSession");
+    private static final Map<PostgreSQLContainer, SharedEnvironment> SHARED_ENVIRONMENTS =
+            new IdentityHashMap<>();
 
     static final String DATABASE_PASSWORD = "test-password";
     static final String SETUP_ID = "browser-postgres";
@@ -95,25 +105,7 @@ final class ManagementConsolePostgresFixture {
             PostgreSQLContainer postgres,
             boolean seed,
             Journey journey) throws Exception {
-        run(temporaryDirectory, postgres, seed, Clock.systemUTC(), journey);
-    }
-
-    static void run(
-            Path temporaryDirectory,
-            PostgreSQLContainer postgres,
-            boolean seed,
-            List<String> expectedOperations,
-            Journey journey) throws Exception {
-        run(temporaryDirectory, postgres, seed, Clock.systemUTC(), expectedOperations, journey);
-    }
-
-    static void run(
-            Path temporaryDirectory,
-            PostgreSQLContainer postgres,
-            boolean seed,
-            Clock clock,
-            Journey journey) throws Exception {
-        run(temporaryDirectory, postgres, seed, clock,
+        runSelected(temporaryDirectory, postgres, seed,
                 List.of(currentScenario().operations()), journey);
     }
 
@@ -121,10 +113,30 @@ final class ManagementConsolePostgresFixture {
             Path temporaryDirectory,
             PostgreSQLContainer postgres,
             boolean seed,
+            List<String> expectedOperations,
+            Journey journey) throws Exception {
+        runSelected(temporaryDirectory, postgres, seed, expectedOperations, journey);
+    }
+
+    static void run(
+            Path temporaryDirectory,
+            PostgreSQLContainer postgres,
+            boolean seed,
+            Clock clock,
+            Journey journey) throws Exception {
+        runIsolated(temporaryDirectory, postgres, seed, clock,
+                List.of(currentScenario().operations()), null, Map.of(), true, journey);
+    }
+
+    static void run(
+            Path temporaryDirectory,
+            PostgreSQLContainer postgres,
+            boolean seed,
             Clock clock,
             List<String> expectedOperations,
             Journey journey) throws Exception {
-        run(temporaryDirectory, postgres, seed, clock, expectedOperations, null, Map.of(), journey);
+        runIsolated(temporaryDirectory, postgres, seed, clock,
+                expectedOperations, null, Map.of(), true, journey);
     }
 
     static void runWithCapabilities(
@@ -134,9 +146,9 @@ final class ManagementConsolePostgresFixture {
             SetupCapabilities advertisedCapabilities,
             List<String> expectedOperations,
             Journey journey) throws Exception {
-        run(temporaryDirectory, postgres, seed, Clock.systemUTC(), expectedOperations,
+        runIsolated(temporaryDirectory, postgres, seed, Clock.systemUTC(), expectedOperations,
                 java.util.Objects.requireNonNull(advertisedCapabilities, "advertisedCapabilities"),
-                Map.of(), journey);
+                Map.of(), false, journey);
     }
 
     static void runTrustedProxy(
@@ -144,14 +156,62 @@ final class ManagementConsolePostgresFixture {
             PostgreSQLContainer postgres,
             boolean seed,
             Journey journey) throws Exception {
-        run(temporaryDirectory, postgres, seed, Clock.systemUTC(),
+        runIsolated(temporaryDirectory, postgres, seed, Clock.systemUTC(),
                 List.of(currentScenario().operations()), null,
                 Map.of("X-PeeGeeQ-User", "browser-operator",
                         "X-PeeGeeQ-Roles", "viewer,operator"),
-                journey);
+                false, journey);
     }
 
-    private static void run(
+    static void runIsolated(
+            Path temporaryDirectory,
+            PostgreSQLContainer postgres,
+            boolean seed,
+            List<String> expectedOperations,
+            Journey journey) throws Exception {
+        runIsolated(temporaryDirectory, postgres, seed, Clock.systemUTC(),
+                expectedOperations, null, Map.of(), false, journey);
+    }
+
+    private static void runSelected(
+            Path temporaryDirectory,
+            PostgreSQLContainer postgres,
+            boolean seed,
+            List<String> expectedOperations,
+            Journey journey) throws Exception {
+        if (seed && canUseSharedSetup(expectedOperations)) {
+            sharedEnvironment(temporaryDirectory, postgres).run(expectedOperations, journey);
+            return;
+        }
+        runIsolated(temporaryDirectory, postgres, seed, Clock.systemUTC(),
+                expectedOperations, null, Map.of(), seed && needsPreparedIsolatedSetup(expectedOperations), journey);
+    }
+
+    static boolean canUseSharedSetup(List<String> expectedOperations) {
+        return expectedOperations.stream().noneMatch(ISOLATED_LIFECYCLE_OPERATIONS::contains);
+    }
+
+    private static boolean needsPreparedIsolatedSetup(List<String> expectedOperations) {
+        return !expectedOperations.contains("testUnregisteredSetup")
+                && !expectedOperations.contains("registerSetup");
+    }
+
+    private static synchronized SharedEnvironment sharedEnvironment(
+            Path temporaryDirectory,
+            PostgreSQLContainer postgres) throws Exception {
+        SharedEnvironment current = SHARED_ENVIRONMENTS.get(postgres);
+        if (current != null) return current;
+        SharedEnvironment created = SharedEnvironment.start(temporaryDirectory, postgres);
+        SHARED_ENVIRONMENTS.put(postgres, created);
+        return created;
+    }
+
+    static synchronized void closeShared(PostgreSQLContainer postgres) throws Exception {
+        SharedEnvironment environment = SHARED_ENVIRONMENTS.remove(postgres);
+        if (environment != null) environment.close();
+    }
+
+    private static void runIsolated(
             Path temporaryDirectory,
             PostgreSQLContainer postgres,
             boolean seed,
@@ -159,78 +219,195 @@ final class ManagementConsolePostgresFixture {
             List<String> expectedOperations,
             SetupCapabilities advertisedCapabilities,
             Map<String, String> trustedProxyHeaders,
+            boolean prepareSetup,
             Journey journey) throws Exception {
         if (!postgres.isRunning()) {
             throw new IllegalStateException("Browser-worker PostgreSQL container is not running");
         }
-        Vertx migrationVertx = null;
-        ManagementServerApplication application = null;
-        PrometheusMeterRegistry meters = new PrometheusMeterRegistry(PrometheusConfig.DEFAULT);
-        try {
-            migrationVertx = Vertx.vertx();
-            resetSchema(migrationVertx, postgres);
-            migrate(migrationVertx, postgres, seed);
+        try (Environment environment = Environment.start(
+                temporaryDirectory.resolve("management-browser-audit.jsonl"),
+                postgres, seed, clock, advertisedCapabilities, trustedProxyHeaders)) {
+            environment.run(expectedOperations, journey, false, prepareSetup);
+        }
+    }
 
-            int managementPort = freePort();
-            String origin = "http://127.0.0.1:" + managementPort;
-            ManagementSecretReference auditKey = new ManagementSecretReference("audit-key");
-            Path auditPath = temporaryDirectory.resolve("management-browser-audit.jsonl");
-            SetupTargetPolicy targetPolicy = new SetupTargetPolicy(
-                            Set.of("internal.example"),
-                            Set.of("127.0.0.0/8"),
-                            Set.of(postgres.getMappedPort(5432)),
-                            true,
-                            false,
-                            false,
-                            false,
-                            Set.of("test-ca"));
-            boolean trustedProxy = !trustedProxyHeaders.isEmpty();
-            ManagementServerConfiguration configuration = trustedProxy
-                    ? ManagementServerConfiguration.trustedProxy(
-                    "127.0.0.1", managementPort,
-                    TrustedProxyAuthenticationConfig.defaults(Set.of("127.0.0.0/8")),
-                    BrowserOriginPolicy.trustedProxy(origin, Set.of()),
-                    targetPolicy, auditPath, auditKey)
-                    : ManagementServerConfiguration.localToken(
-                    "127.0.0.1", managementPort, origin, targetPolicy, auditPath, auditKey);
-            InetAddress databaseAddress = InetAddress.getByName(postgres.getHost());
-            Buffer serverCertificate = certificate();
-            application = advertisedCapabilities == null
-                    ? await(ManagementServerApplication.start(
-                    configuration,
-                    reference -> reference.equals(auditKey) ? new byte[32] : null,
-                    ignored -> List.of(databaseAddress),
-                    trustProfile -> trustProfile.equals("test-ca") ? serverCertificate : null,
-                    meters,
-                    clock))
-                    : await(ManagementServerApplication.start(
-                    configuration,
-                    reference -> reference.equals(auditKey) ? new byte[32] : null,
-                    ignored -> List.of(databaseAddress),
-                    trustProfile -> trustProfile.equals("test-ca") ? serverCertificate : null,
-                    meters,
-                    clock,
-                    ignored -> advertisedCapabilities));
+    private static final class SharedEnvironment implements AutoCloseable {
+        private final Environment environment;
 
-            String bootstrapToken = trustedProxy
-                    ? ""
-                    : application.takeBootstrapToken().orElseThrow();
-            List.of(DATABASE_PASSWORD, "stored-value", "owner-secret", "bulk-secret",
-                    "pubsub-secret", "retained-value", "special-secret")
-                    .forEach(ManagementBrowserEvidenceListener::registerSensitiveCanary);
-            ManagementBrowserEvidenceListener.registerSensitiveCanary(bootstrapToken);
-            try (Playwright playwright = Playwright.create(new Playwright.CreateOptions()
-                    .setEnv(Map.of("PLAYWRIGHT_SKIP_BROWSER_DOWNLOAD", "1")));
-                 Browser browser = playwright.chromium().launch(ManagementPlaywright.launchOptions());
-                 BrowserContext browserContext = browser.newContext(new Browser.NewContextOptions()
-                         .setExtraHTTPHeaders(trustedProxyHeaders))) {
+        private SharedEnvironment(Environment environment) {
+            this.environment = environment;
+        }
+
+        private static SharedEnvironment start(
+                Path temporaryDirectory,
+                PostgreSQLContainer postgres) throws Exception {
+            Path artifactDirectory = ManagementBrowserRunConfig.current().artifactDirectory();
+            Path auditDirectory = artifactDirectory != null
+                    ? artifactDirectory.resolve("shared-suite")
+                    : temporaryDirectory.resolve("shared-suite");
+            Files.createDirectories(auditDirectory);
+            Path auditPath = auditDirectory.resolve(
+                    "management-browser-audit-" + UUID.randomUUID() + ".jsonl");
+            Environment environment = Environment.start(
+                    auditPath, postgres, true, Clock.systemUTC(), null, Map.of());
+            try {
+                environment.run(List.of(), context -> {
+                    authenticate(context);
+                    registerSetup(context);
+                }, true, false);
+                return new SharedEnvironment(environment);
+            } catch (Exception | Error failure) {
+                environment.close();
+                throw failure;
+            }
+        }
+
+        private synchronized void run(
+                List<String> expectedOperations,
+                Journey journey) throws Exception {
+            resetData(environment.postgres, true);
+            environment.run(expectedOperations, journey, true, false);
+        }
+
+        @Override
+        public synchronized void close() throws Exception {
+            environment.close();
+        }
+    }
+
+    private static final class Environment implements AutoCloseable {
+        private final PostgreSQLContainer postgres;
+        private final String origin;
+        private final String bootstrapToken;
+        private final Path auditPath;
+        private final PrometheusMeterRegistry meters;
+        private final ManagementServerApplication application;
+        private final Browser browser;
+        private final Map<String, String> trustedProxyHeaders;
+        private List<Cookie> sessionCookies = List.of();
+
+        private Environment(
+                PostgreSQLContainer postgres,
+                String origin,
+                String bootstrapToken,
+                Path auditPath,
+                PrometheusMeterRegistry meters,
+                ManagementServerApplication application,
+                Browser browser,
+                Map<String, String> trustedProxyHeaders) {
+            this.postgres = postgres;
+            this.origin = origin;
+            this.bootstrapToken = bootstrapToken;
+            this.auditPath = auditPath;
+            this.meters = meters;
+            this.application = application;
+            this.browser = browser;
+            this.trustedProxyHeaders = Map.copyOf(trustedProxyHeaders);
+        }
+
+        private static Environment start(
+                Path auditPath,
+                PostgreSQLContainer postgres,
+                boolean seed,
+                Clock clock,
+                SetupCapabilities advertisedCapabilities,
+                Map<String, String> trustedProxyHeaders) throws Exception {
+            Vertx migrationVertx = Vertx.vertx();
+            try {
+                migrate(migrationVertx, postgres, false);
+            } finally {
+                await(migrationVertx.close());
+            }
+            resetData(postgres, seed);
+
+            Files.createDirectories(auditPath.toAbsolutePath().getParent());
+            Files.deleteIfExists(auditPath);
+            PrometheusMeterRegistry meters = new PrometheusMeterRegistry(PrometheusConfig.DEFAULT);
+            ManagementServerApplication application = null;
+            try {
+                int managementPort = freePort();
+                String origin = "http://127.0.0.1:" + managementPort;
+                ManagementSecretReference auditKey = new ManagementSecretReference("audit-key");
+                SetupTargetPolicy targetPolicy = new SetupTargetPolicy(
+                        Set.of("internal.example"),
+                        Set.of("127.0.0.0/8"),
+                        Set.of(postgres.getMappedPort(5432)),
+                        true,
+                        false,
+                        false,
+                        false,
+                        Set.of("test-ca"));
+                boolean trustedProxy = !trustedProxyHeaders.isEmpty();
+                ManagementServerConfiguration configuration = trustedProxy
+                        ? ManagementServerConfiguration.trustedProxy(
+                        "127.0.0.1", managementPort,
+                        TrustedProxyAuthenticationConfig.defaults(Set.of("127.0.0.0/8")),
+                        BrowserOriginPolicy.trustedProxy(origin, Set.of()),
+                        targetPolicy, auditPath, auditKey)
+                        : ManagementServerConfiguration.localToken(
+                        "127.0.0.1", managementPort, origin, targetPolicy, auditPath, auditKey);
+                InetAddress databaseAddress = InetAddress.getByName(postgres.getHost());
+                Buffer serverCertificate = certificate();
+                application = advertisedCapabilities == null
+                        ? await(ManagementServerApplication.start(
+                        configuration,
+                        reference -> reference.equals(auditKey) ? new byte[32] : null,
+                        ignored -> List.of(databaseAddress),
+                        trustProfile -> trustProfile.equals("test-ca") ? serverCertificate : null,
+                        meters,
+                        clock))
+                        : await(ManagementServerApplication.start(
+                        configuration,
+                        reference -> reference.equals(auditKey) ? new byte[32] : null,
+                        ignored -> List.of(databaseAddress),
+                        trustProfile -> trustProfile.equals("test-ca") ? serverCertificate : null,
+                        meters,
+                        clock,
+                        ignored -> advertisedCapabilities));
+                String bootstrapToken = trustedProxy
+                        ? ""
+                        : application.takeBootstrapToken().orElseThrow();
+                registerSensitiveCanaries(bootstrapToken);
+                Browser browser = ManagementBrowserPlaywrightSuite.browser();
+                return new Environment(
+                        postgres, origin, bootstrapToken, auditPath, meters,
+                        application, browser, trustedProxyHeaders);
+            } catch (Exception | Error failure) {
+                if (application != null) await(application.closeAsync());
+                meters.close();
+                throw failure;
+            }
+        }
+
+        private void run(
+                List<String> expectedOperations,
+                Journey journey,
+                boolean reuseSession,
+                boolean prepareSetup) throws Exception {
+            Browser.NewContextOptions options = new Browser.NewContextOptions()
+                    .setExtraHTTPHeaders(trustedProxyHeaders);
+            long auditStart = Files.exists(auditPath) ? Files.size(auditPath) : 0L;
+            try (BrowserContext browserContext = browser.newContext(options)) {
+                boolean preparedSharedScenario = reuseSession && !sessionCookies.isEmpty();
+                if (preparedSharedScenario) {
+                    browserContext.addCookies(sessionCookies);
+                }
+                if (reuseSession) {
+                    browserContext.addInitScript("""
+                            if (sessionStorage.getItem('peegeeq-cache.scope.v1') === null) {
+                              sessionStorage.setItem(
+                                'peegeeq-cache.scope.v1',
+                                '{"setupId":"browser-postgres"}');
+                            }
+                            """);
+                }
                 Page page = browserContext.newPage();
                 Diagnostics diagnostics = new Diagnostics();
                 diagnostics.attach(page);
                 ManagementBrowserOperationTrace operationTrace = new ManagementBrowserOperationTrace();
                 operationTrace.attach(page);
                 try {
-                    journey.run(new Context(
+                    Context context = new Context(
                             page,
                             browserContext,
                             postgres,
@@ -238,31 +415,91 @@ final class ManagementConsolePostgresFixture {
                             bootstrapToken,
                             auditPath,
                             diagnostics,
-                            operationTrace));
+                            operationTrace);
+                    if (preparedSharedScenario) {
+                        authenticate(context);
+                        com.microsoft.playwright.assertions.PlaywrightAssertions.assertThat(
+                                page.getByTitle("Active setup scope"))
+                                .hasText("Setup: " + SETUP_ID);
+                    } else if (prepareSetup) {
+                        authenticate(context);
+                        registerSetup(context);
+                    }
+                    journey.run(context);
+                    diagnostics.assertNoBrowserErrors();
+                    diagnostics.assertNoUnexpectedFailedResponses();
+                    operationTrace.assertObservedExactly(expectedOperations, FIXTURE_OPERATIONS);
+                    assertNoUndeclaredAuditedOperations(operationTrace.observed(), expectedOperations);
+                    assertDurableAuditObserved(auditPath, auditStart, expectedOperations);
+                    if (reuseSession) {
+                        assertSharedSetupRegisteredOnce(auditPath);
+                        cleanupActiveSubscription(page, browserContext);
+                    }
                 } catch (Exception | AssertionError failure) {
                     captureSanitizedFailureScreenshot(page);
+                    if (reuseSession) cleanupActiveSubscriptionQuietly(page, browserContext);
                     throw failure;
+                } finally {
+                    if (reuseSession) {
+                        sessionCookies = List.copyOf(browserContext.cookies());
+                    }
                 }
-                diagnostics.assertNoBrowserErrors();
-                diagnostics.assertNoUnexpectedFailedResponses();
-                operationTrace.assertObservedExactly(expectedOperations, FIXTURE_OPERATIONS);
-                assertNoUndeclaredAuditedOperations(operationTrace.observed(), expectedOperations);
-                assertDurableAuditObserved(auditPath, expectedOperations);
             }
-        } finally {
-            if (application != null) {
+        }
+
+        private static void cleanupActiveSubscription(
+                Page page,
+                BrowserContext browserContext) {
+            browserContext.setOffline(false);
+            Locator stop = page.getByRole(
+                    com.microsoft.playwright.options.AriaRole.BUTTON,
+                    new Page.GetByRoleOptions().setName("Stop subscription").setExact(true));
+            if (stop.count() == 0) return;
+            stop.click(new Locator.ClickOptions().setTimeout(5_000));
+            page.waitForCondition(
+                    () -> stop.count() == 0,
+                    new Page.WaitForConditionOptions().setTimeout(5_000));
+        }
+
+        private static void cleanupActiveSubscriptionQuietly(
+                Page page,
+                BrowserContext browserContext) {
+            try {
+                cleanupActiveSubscription(page, browserContext);
+            } catch (RuntimeException ignored) {
+                // Preserve the scenario's original failure and let suite shutdown close leftovers.
+            }
+        }
+
+        @Override
+        public void close() throws Exception {
+            try {
                 await(application.closeAsync());
                 double leaked = meters.find("peegeeq.management.shutdown.leaked_resources")
                         .counter() == null
                         ? 0.0
-                        : meters.find("peegeeq.management.shutdown.leaked_resources").counter().count();
+                        : meters.find("peegeeq.management.shutdown.leaked_resources")
+                        .counter().count();
                 assertNoLeakedResources(leaked);
+            } finally {
+                meters.close();
             }
-            if (migrationVertx != null) {
-                await(migrationVertx.close());
-            }
-            meters.close();
         }
+    }
+
+    private static void registerSensitiveCanaries(String bootstrapToken) {
+        List.of(DATABASE_PASSWORD, "stored-value", "owner-secret", "bulk-secret",
+                "pubsub-secret", "retained-value", "special-secret")
+                .forEach(ManagementBrowserEvidenceListener::registerSensitiveCanary);
+        ManagementBrowserEvidenceListener.registerSensitiveCanary(bootstrapToken);
+    }
+
+    private static void assertSharedSetupRegisteredOnce(Path auditPath) throws Exception {
+        long registrations = Files.readString(auditPath).lines()
+                .filter(line -> line.contains("\"action\":\"REGISTER_SETUP\""))
+                .count();
+        assertEquals(1L, registrations,
+                "The shared browser fixture must register its setup exactly once per suite");
     }
 
     static void authenticate(Context context) {
@@ -271,6 +508,16 @@ final class ManagementConsolePostgresFixture {
                 ManagementPlaywright.beginScenario(page);
         try {
             assertEquals(200, page.navigate(context.origin() + "/ui/").status());
+            var overview = page.getByRole(com.microsoft.playwright.options.AriaRole.HEADING,
+                    new Page.GetByRoleOptions().setName("Overview").setExact(true));
+            var bootstrapInput = page.getByLabel("Bootstrap token");
+            page.waitForCondition(
+                    () -> overview.count() > 0 || bootstrapInput.count() > 0,
+                    new Page.WaitForConditionOptions().setTimeout(10_000));
+            if (overview.count() > 0) {
+                presentation.finish();
+                return;
+            }
             if (context.bootstrapToken().isBlank()) {
                 com.microsoft.playwright.assertions.PlaywrightAssertions.assertThat(page.getByRole(
                         com.microsoft.playwright.options.AriaRole.HEADING,
@@ -278,7 +525,7 @@ final class ManagementConsolePostgresFixture {
                 presentation.finish();
                 return;
             }
-            page.getByLabel("Bootstrap token").fill(context.bootstrapToken());
+            bootstrapInput.fill(context.bootstrapToken());
             page.getByRole(com.microsoft.playwright.options.AriaRole.BUTTON,
                     new Page.GetByRoleOptions().setName("Connect")).click();
             com.microsoft.playwright.assertions.PlaywrightAssertions.assertThat(page.getByRole(
@@ -295,8 +542,20 @@ final class ManagementConsolePostgresFixture {
         PostgreSQLContainer postgres = context.postgres();
         page.getByRole(com.microsoft.playwright.options.AriaRole.LINK,
                 new Page.GetByRoleOptions().setName("Setups")).click();
-        page.getByRole(com.microsoft.playwright.options.AriaRole.BUTTON,
-                new Page.GetByRoleOptions().setName("Register the first setup")).click();
+        var existing = page.getByRole(com.microsoft.playwright.options.AriaRole.ROW)
+                .filter(new com.microsoft.playwright.Locator.FilterOptions().setHasText(SETUP_NAME));
+        var firstRegistration = page.getByRole(com.microsoft.playwright.options.AriaRole.BUTTON,
+                new Page.GetByRoleOptions().setName("Register the first setup"));
+        page.waitForCondition(
+                () -> existing.count() > 0 || firstRegistration.count() > 0,
+                new Page.WaitForConditionOptions().setTimeout(10_000));
+        if (existing.count() > 0) {
+            var activeScope = page.getByTitle("Active setup scope");
+            com.microsoft.playwright.assertions.PlaywrightAssertions.assertThat(activeScope)
+                    .hasText("Setup: " + SETUP_ID);
+            return;
+        }
+        firstRegistration.click();
         var dialog = page.getByRole(com.microsoft.playwright.options.AriaRole.DIALOG,
                 new Page.GetByRoleOptions().setName("Register setup"));
         dialog.getByLabel("Setup ID").fill(SETUP_ID);
@@ -380,13 +639,23 @@ final class ManagementConsolePostgresFixture {
     }
 
     static void assertDurableAuditObserved(Path auditPath, List<String> operations) throws Exception {
+        assertDurableAuditObserved(auditPath, 0L, operations);
+    }
+
+    private static void assertDurableAuditObserved(
+            Path auditPath,
+            long startOffset,
+            List<String> operations) throws Exception {
         List<String> expectedActions = operations.stream()
                 .map(AUDITED_OPERATIONS::get)
                 .filter(java.util.Objects::nonNull)
                 .distinct()
                 .toList();
         if (expectedActions.isEmpty()) return;
-        String audit = Files.readString(auditPath);
+        byte[] completeAudit = Files.readAllBytes(auditPath);
+        int safeOffset = (int) Math.min(Math.max(0L, startOffset), completeAudit.length);
+        String audit = new String(
+                completeAudit, safeOffset, completeAudit.length - safeOffset, StandardCharsets.UTF_8);
         expectedActions.forEach(action -> assertTrue(audit.contains("\"action\":\"" + action + "\""),
                 () -> "Durable audit did not record expected action " + action));
     }
@@ -410,40 +679,52 @@ final class ManagementConsolePostgresFixture {
         Pool pool = Pool.pool(vertx, connectOptions(postgres), new PoolOptions().setMaxSize(1));
         try {
             await(new PgSchemaMigrator(pool, "peegee_cache").migrate());
-            if (seed) {
-                await(pool.query("""
-                        INSERT INTO peegee_cache.cache_entries
-                            (namespace, cache_key, value_type, value_bytes, numeric_value, version)
-                        VALUES
-                            ('logical-orders', 'customer:1', 'STRING',
-                             convert_to('stored-value', 'UTF8'), NULL, 3),
-                            ('logical-orders', 'json-record', 'JSON',
-                             convert_to('{"safe":true}', 'UTF8'), NULL, 1),
-                            ('logical-orders', 'long-boundary', 'LONG',
-                             NULL, 9223372036854775807, 1),
-                            ('logical-orders', 'binary-record', 'BYTES',
-                             decode('00ff41', 'hex'), NULL, 1);
-                        INSERT INTO peegee_cache.cache_counters
-                            (namespace, counter_key, counter_value, version)
-                        VALUES ('logical-orders', 'count', 42, 4);
-                        INSERT INTO peegee_cache.cache_locks
-                            (namespace, lock_key, owner_token, fencing_token, version, lease_expires_at)
-                        VALUES ('logical-orders', 'lease', 'owner-secret', 7, 5,
-                                NOW() + INTERVAL '1 hour');
-                        """).execute());
-            }
+            if (seed) seedData(pool);
         } finally {
             await(pool.close());
         }
     }
 
-    private static void resetSchema(Vertx vertx, PostgreSQLContainer postgres) throws Exception {
+    private static void resetData(PostgreSQLContainer postgres, boolean seed) throws Exception {
+        Vertx vertx = Vertx.vertx();
         Pool pool = Pool.pool(vertx, connectOptions(postgres), new PoolOptions().setMaxSize(1));
         try {
-            await(pool.query("DROP SCHEMA IF EXISTS peegee_cache CASCADE").execute());
+            await(pool.query("""
+                    TRUNCATE TABLE
+                        peegee_cache.cache_entries,
+                        peegee_cache.cache_counters,
+                        peegee_cache.cache_locks;
+                    ALTER SEQUENCE peegee_cache.lock_version_seq RESTART WITH 1;
+                    ALTER SEQUENCE peegee_cache.lock_fencing_seq RESTART WITH 1;
+                    """).execute());
+            if (seed) seedData(pool);
         } finally {
             await(pool.close());
+            await(vertx.close());
         }
+    }
+
+    private static void seedData(Pool pool) throws Exception {
+        await(pool.query("""
+                INSERT INTO peegee_cache.cache_entries
+                    (namespace, cache_key, value_type, value_bytes, numeric_value, version)
+                VALUES
+                    ('logical-orders', 'customer:1', 'STRING',
+                     convert_to('stored-value', 'UTF8'), NULL, 3),
+                    ('logical-orders', 'json-record', 'JSON',
+                     convert_to('{"safe":true}', 'UTF8'), NULL, 1),
+                    ('logical-orders', 'long-boundary', 'LONG',
+                     NULL, 9223372036854775807, 1),
+                    ('logical-orders', 'binary-record', 'BYTES',
+                     decode('00ff41', 'hex'), NULL, 1);
+                INSERT INTO peegee_cache.cache_counters
+                    (namespace, counter_key, counter_value, version)
+                VALUES ('logical-orders', 'count', 42, 4);
+                INSERT INTO peegee_cache.cache_locks
+                    (namespace, lock_key, owner_token, fencing_token, version, lease_expires_at)
+                VALUES ('logical-orders', 'lease', 'owner-secret', 7, 5,
+                        NOW() + INTERVAL '1 hour');
+                """).execute());
     }
 
     private static PgConnectOptions connectOptions(PostgreSQLContainer postgres) {
